--- a/talos/src/styles/global.scss
+++ b/talos/src/styles/global.scss
@@ -47,7 +47,7 @@
         height: 100svh;
     }
 }
-@supports (not (height: 100dv)) and (not (height: 100svh)) {
+@supports (not (height: 100dvh)) and (not (height: 100svh)) {
     app {
         width: 100%;
         height: 100%;
